# wasmer-bench

./: Cargo.toml  Makefile  README.md  output_metrics.py  send_metrics.py
.circleci/: config.yml
benches/: benchmarks.rs
benchmarks/: Cargo.toml
benchmarks/src/: bench.wasm  fannkuchredux.rs  fib.rs  lib.rs  nbody.rs  sha.rs  sum.rs
rust-wasm-c-api/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
rust-wasm-c-api/src/: lib.rs
