[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bench-benchmarks  = { path = "./benchmarks", version = "0.1.0" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer.git" }
wasmer-llvm-backend = { git = "https://github.com/wasmerio/wasmer.git"  }
wasmer-clif-backend = { git = "https://github.com/wasmerio/wasmer.git" }
wasmer-singlepass-backend = { git = "https://github.com/wasmerio/wasmer.git" }
# For testing local wasmer checkout
# wasmer-runtime-core = { path = "../wasmer/lib/runtime-core" }
# wasmer-llvm-backend = { path = "../wasmer/lib/llvm-backend" }
# wasmer-clif-backend = { path = "../wasmer/lib/clif-backend" }
# wasmer-dynasm-backend = { path = "../wasmer/lib/dynasm-backend"  }
wasmi = { version = "0.4.4", optional = true }
rust-wasm-c-api = { path = "./rust-wasm-c-api", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false

[features]
v8 = ["rust-wasm-c-api"]
bench-wasmi = ["wasmi"]
fast = []

